force-app/main/default/objects/Property_Owners__c/Property_Owners__c.object-meta.xml
<CustomObject>
    <label>Property Owners</label>
    <nameField>
        <displayFormat>Prop-Owner {0000}</displayFormat>
        <label>Property Owners Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>