force-app/main/default/objects/Property_Owners__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Property__r.Property_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>