force-app/main/default/objects/Property_Owners__c/fields/Title_Deed_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Date__c</fullName>
    <formula>Property__r.Title_Deed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Deed Date</label>
    <type>Date</type>
</CustomField>