force-app/main/default/objects/Property_Owners__c/fields/Title_Deed_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Number__c</fullName>
    <formula>Property__r.Title_Deed_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Deed Number</label>
    <type>Text</type>
</CustomField>