force-app/main/default/objects/Property_Owners__c/fields/Title_Deed_Type__c.field-meta.xml
<CustomField>
    <fullName>Title_Deed_Type__c</fullName>
    <formula>TEXT( Property__r.Title_Deed_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Deed Type</label>
    <type>Text</type>
</CustomField>